Change QuicHttpStream::OnError to look at both stream and connection errors.

BUG=622537

Review-Url: https://codereview.chromium.org/2090703003
Cr-Commit-Position: refs/heads/master@{#401526}

Former-commit-id: cd5f1c60daa702f416e719edf13358571e0bf084